practicas/practica03/ejer04/css/styles.css
:root {
  --secondary: #3f2973;
}

html {
  box-sizing: border-box;
  font-size: 62.5%; /* 1rem = 10px */
}

*,
*::after,
*::before {
  box-sizing: inherit;
}

body {
  font-family: 'Ubuntu', sans-serif;
  font-size: 1.6rem;

  min-height: 100vh;
  padding: 4.8rem 0 10rem 0;

  background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
    url('../img/portal.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
}

.container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 5%;
}

.btn {
  border: none;
  padding: 1.2rem;
  border-radius: 6px;
  cursor: pointer;
}

.glass {
  background-color: rgba(255, 255, 255, 0.3);
  backdrop-filter: blur(15px);
  box-shadow: 0px 12px 16px -4px rgba(0, 0, 0, 0.3);
}

.glass--sm {
  backdrop-filter: blur(5px);
}

.episodes {
  display: grid;
  gap: 2rem;
  grid-template-columns: repeat(auto-fill, 320px);
  grid-auto-rows: 1fr;
  justify-content: center;

  list-style: none;
  margin: 0;
  padding: 0;
}

.episode {
  border-radius: 0.5rem;
  cursor: pointer;
  padding: 1.4rem;
  transition: 0.25s ease-in-out;
  position: relative;
  z-index: 0;
}

.episode > a {
  color: #1f1f1f;
  text-decoration: none;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.episode:hover {
  background-color: rgba(255, 255, 255, 0.5);
  box-shadow: 0px 20px 24px -6px rgba(0, 0, 0, 0.3);
  z-index: 1;
}


.episode__info {
  margin: 0.25em 0 0 0;
}

.episode__name {
  font-size: 2em;
  margin: 0 0 1rem;
  position: relative;
  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
}

.episode__name::before {
  position: absolute;
  bottom: -0.1em;
  left: 0;
  content: '';
  width: 12%;
  height: 0.15em;
  background-color: var(--secondary);
  box-shadow: 0px 1px 2px rgba(45, 29, 82, 0.3);
  border-radius: 1.5px;
}

.episode__episode {
  color: var(--secondary);
  text-shadow: 0px 1px 2px rgba(45, 29, 82, 0.3);
  font-weight: 700;
  margin-right: 0.25em;
}

.episode__air-date {
  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
}

.pagination {
  position: fixed;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  gap: 0.75em;
  margin-bottom: 2em;
}

.pagination__btn {
  background-color: rgba(255, 255, 255, 0.5);
  font-weight: 700;
  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
  box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.3),
    0 4px 16px 0px rgba(0, 0, 0, 0.3);
}

.pagination__btn--selected {
  background-color: rgba(255, 255, 255, 0.75);
}

.search {
  display: flex;
  justify-content: center;
  font-size: 1.2em;
  gap: 2rem;
  margin-bottom: 4rem;
}

.search__input {
  outline: none;
  border: none;
  border-radius: 0.5rem;
  padding: 1.2rem;
  width: 80%;
  transition: 0.25s ease-in-out; 
}

.search__input::placeholder {
  color: #333;
}

.search__input:focus {
  background-color: rgba(255, 255, 255, 0.75);
  box-shadow: 0px 20px 24px -6px rgba(0, 0, 0, 0.3);
}

.search__btn {
  transition: 
    0.25s ease-in-out background-color, 
    0.12s ease-in-out box-shadow;
}

.search__btn:hover {
  background-color: rgba(255, 255, 255, 0.75);
}

.search__btn:active {
  box-shadow: 0px 4px 8px -2px rgba(0, 0, 0, 0.3);
}

.search__btn img {
  display: block;
  width: 1em;
  height: 1em;
}

